--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100&display=swap" rel="stylesheet">
     <title>React Protfolio Website</title>
     <style>
       *{
         font-family: 'Roboto', sans-serif;
         margin: 0;
+        overflow-x: hidden;
+        
       }
     </style>
   </head>
